# ara-flask

./: .gitignore  README.md  dbinit.sql  pyproject.toml  server.py  shame.py
ara_flask/: __init__.py  ara.py  dbinit.sql  models.py  transactions.py
ara_flask/models/: anime.py
